fix painel de controle css, fix buscacliente